--- a/index.html
+++ b/index.html
@@ -1,32 +1,5 @@
-<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>💀</text></svg>">
-<title>Rejected By Y-Combinator</title>
-
-<!-- Primary Meta Tags -->
-<title>Rejected By Y-Combinator: Interesting stories from those who didn't make it</title>
-<meta name="title" content="Rejected By Y-Combinator: Interesting stories from those who didn't make it">
-<meta name="description" content="A directory website for rejected YC companies, including fascinating stories, links, and more.">
-
-<!-- Open Graph / Facebook -->
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://rejectedbyycombinator.com/">
-<meta property="og:title" content="Rejected By Y-Combinator: Interesting stories from those who didn't make it">
-<meta property="og:description" content="A directory website for rejected YC companies, including fascinating stories, links, and more.">
-<meta property="og:image" content="https://rejectedbyycombinator.com/rejected-by-ycombinator.jpg">
-
-<!-- Twitter -->
-<meta property="twitter:card" content="summary_large_image">
-<meta name="twitter:site" content="@aminozuur">
-<meta property="twitter:url" content="https://rejectedbyycombinator.com/">
-<meta property="twitter:title" content="Rejected By Y-Combinator: Interesting stories from those who didn't make it">
-<meta property="twitter:description" content="A directory website for rejected YC companies, including fascinating stories, links, and more.">
-<meta property="twitter:image" content="https://rejectedbyycombinator.com/rejected-by-ycombinator-tw.jpg">
-<meta name="twitter:creator" content="@aminozuur" />
-<!-- End metatags -->
-
 <style>
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 
 body {
 	font-family: 'Roboto Mono', monospace;
@@ -61,98 +34,6 @@ nav {
 	text-shadow: none;
 }
 
-.company {
-	background: #d4d4d4;
-	padding: 5px 0px 5 10px;
-	cursor: pointer;
-	width: fit-content;
-	margin: 20px auto;
-	font-weight: bolder;
-	letter-spacing: 1px;
-}
-	
-.company:after {
-	content: "+";
-	background: cyan;
-	padding: 5px 10px;
-	margin-left: 15px;
-}
-
-.company:hover {
-	background: yellow;
-}
-	
-#add {
-	background: #0ada71;
-    padding: 10px 30px;
-    margin: 10px auto;
-    margin-bottom: -10px;
-    color: white;
-    text-shadow: 1px 1px green;
-}
-	
-#add::after {
-	content: ""; background: inherit; padding: 0;
-}
-
-#add:hover {background: #07b95f;}
-
-.accordion {
-	font-weight: bolder;
-    background-color: #d4d4d4;
-    color: #444;
-    cursor: pointer;
-    padding: 10 0 10 18;
-    width: fit-content;
-    text-align: left;
-    border: none;
-    outline: none;
-    transition: 0.2s;
-	margin: 5px 0px;
-}
-
-/* Add a background color to the accordion if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
-.accordion.active, p.accordion:hover {
-	background-color: white;
-}
-
-.accordion:after {
-	content: "+";
-    background: #ff6600;
-    padding: 10px 15px;
-    margin-left: 15px;
-	text-shadow: none;
-	color: white;
-}
-
-.accordion.active:after {
-	content: "-"; 
-}
-
-/* Style the element that is used for the panel class */
-.panel {
-	padding: 0 18px;
-	margin: 0px;
-	background-color: white;
-	width: 100%;
-	max-height: 0;
-	overflow: hidden;
-	transition: 0.1s ease-in-out;
-	opacity: 0;
-	color: gray;
-	font-family: -apple-system, BlinkMacSystemFont, Helvetica Neue, Helvetica, sans-serif;
-	line-height: 1.6rem;
-}
-	
-.panel b {color: black;}
-
-.panel.show {
-	text-align: left;
-	padding: 20px 18px;
-	opacity: 1;
-	margin-top: -5px;
-	max-height: 5000px; /* as long as its more than the height of the content (on all screen sizes) */
-}
 .madeby {
 	font-size: 0.85rem;
     padding: 5px 10px;
@@ -178,21 +59,8 @@ nav {
 #rbyimg {
 	height: 200px;
 }
-#howtoadd {
-	background: palegreen;
-    padding: 20px 10px;
-	text-shadow: none;
-	border-radius: 20px;
-	margin: 25px 0 75px 0;
-}
 
-#howtoadd a {color: blue;}
-	
-textarea {
-	width: 90%;
-	height: 350px;
-	padding: 10px;
-}
+
 
 h1 a {color: black; text-decoration: none;}
 	
@@ -214,128 +82,23 @@ h1 a {color: black; text-decoration: none;}
 	
 }
 </style>
-
-<nav><h1><a href="http://rejectedbyycombinator.com/">Rejected By Y-Combinator 💀</a></h1></nav>
-<br><br>
+<html>
+    <head>
+        <title>Rejected by Y-Combinator Podcast</title>
+    </head>
+    <body>
+        <nav><h1><a href="http://rejectedbyycombinator.com/">Rejected By Y-Combinator 💀</a></h1></nav>
+    <br><br>
 <div id="container">
-	
-	<a href="https://rejectedbyycombinator.com/rejected-by-ycombinator.jpg"><img src="https://rejectedbyycombinator.com/rejected-by-ycombinator.jpg" id="rbyimg"></a><br><br>
-<h2>Interesting stories from those who didn't make it</h2>
-<small>Each year, over ten thousand people are rejected by Y-Combinator. This page is a directory that collects their stories, so that we can learn from each other.</small>	
-
-<div class="company" id="add" onclick="submitToggle()">Submit your story</div><br>
-<div id="howtoadd">
-To add your company, just fill out this form, 
-and copy+paste it into my <a href="https://twitter.com/aminozuur" target="_blank">Twitter DM's</a>. 
-I will then add your company. <br>
-If you are too lazy to write it, 
-I can do a short 5 minute voicecall with you, 
-and I'll write it out, just <a href="https://twitter.com/aminozuur" target="_blank">DM me</a> to set it up.<br><br>
-<b>Step 1: Share your story 👇🏽</b>
-<textarea>
-Company Name: 
---
-URL: 
---
-What does your project or company do? (1 or 2 sentences please)
---
-
-Your Story:
---
-Here, you can write anything you want. For inspiration, you could talk about:
-Introduce yourself.
-What would you have done differently?	
-What did you hope to get out of YC?
-Or anything interesting about you as a person, your company or your YC application. The stage is yours 💯.
-</textarea>
-<br><br>
-<b>Step 2: Send it to me 👇🏽</b><br>
-<a href="https://twitter.com/aminozuur" target="_blank">DM me on Twitter</a> or email it to amin@eftegarie.com.
-<br><br>
-<!--
-<b>Step 3 is optional:</b><br> Add a link or banner to your website and link back to this website 🔥🔥. This is NOT a requirement.<br>
--->
-</div>
-	
-<p class="accordion">Wordo Dictionary</p>
-<div class="panel">
-🔗 &nbsp; <a href="https://wor.do">https://wor.do</a>
-<br><br>
-<b>What does your project or company do?</b><br>
-Wordo is a beautifully designed dictionary. It has social features, you can follow other users and get a notification when they 'like' words<br><br>
-	
-
-<b>What would you have done differently during your application?</b><br>
-Nothing. I was honest in the application, and honestly, YC was smart to reject us.<br><br>
-	
-<b>What did you hope to get out of getting into YC?</b><br>
-We didn't need funding. We just applied because we wanted to gain valuable connections and see if we'd get in. <br><br>
-	
-<b>How did your company do without YC?</b><br>
-Not good. Wordo has a handful of powerusers, and that's it. I've given up on the project long ago, and moved on to others things.<br><br>
-	
-<b>Any interesting story regarding your company you’d like to share?</b><br>
-One of our users has liked over ten thousand words on Wordo. You can check his profile here: <a href="https://wor.do/@computingfreak">https://wor.do/@computingfreak</a>
+    <a href="https://rejectedbyycombinator.com/rejected-by-ycombinator.jpg"><img src="https://rejectedbyycombinator.com/rejected-by-ycombinator.jpg" id="rbyimg"></a><br><br>
+    <h2>Interesting stories from those who didn't make it</h2>
+    <small>Each year, over ten thousand people are rejected by Y-Combinator. This page is a directory that collects their stories, so that we can learn from each other.</small>	
+    <br><br>
+    <iframe src="https://open.spotify.com/embed-podcast/show/6MYYlFqQmcpfOi3fPIKxgJ" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 
 </div>
-
-<p class="accordion">Example company Inc.</p>
-<div class="panel">
-🔗 &nbsp; <a href="https://wor.do">https://example.com</a>
-<br><br>
-<b>What does your company do?</b><br>
-Answer here.
-<br><br>
-<b>Any guess on why you got rejected?</b><br>
-Fascinating response here.<br><br>
-
-<b>How did you react to Y-Combinator rejecting you</b><br>
-I became suicidal.
-</div>
-
 
 <a href="https://twitter.com/aminozuur" target="_blank"><div class="madeby">Made in quarantine <br> by <u>@aminozuur</u></div></a>
 
-	
-</div>
-
-<script>
-var howtoadd = document.getElementById('howtoadd');
-howtoadd.style.display = "none";
-function submitToggle() {
-	if (howtoadd.style.display === "none") {
-		howtoadd.style.display = "block";
-	} else {
-		howtoadd.style.display = "none";
-	}
-}
-
-// this one toggles only one open at a time
-// Ref  - http://stackoverflow.com/questions/37745154/only-open-one-accordion-tab-at-one-time
-	
-document.addEventListener("DOMContentLoaded", function(event) { 
-
-var acc = document.getElementsByClassName("accordion");
-var panel = document.getElementsByClassName('panel');
-
-for (var i = 0; i < acc.length; i++) {
-    acc[i].onclick = function() {
-        var setClasses = !this.classList.contains('active');
-        setClass(acc, 'active', 'remove');
-        setClass(panel, 'show', 'remove');
-
-        if (setClasses) {
-            this.classList.toggle("active");
-            this.nextElementSibling.classList.toggle("show");
-        }
-    }
-}
-
-function setClass(els, className, fnName) {
-    for (var i = 0; i < els.length; i++) {
-        els[i].classList[fnName](className);
-    }
-}
-
-});
-</script>
+    </body>
+</html>
