--- a/index.html
+++ b/index.html
@@ -85,6 +85,32 @@ h1 a {color: black; text-decoration: none;}
 <html>
     <head>
         <title>Rejected by Y-Combinator Podcast</title>
+        <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>💀</text></svg>">
+        <title>Rejected By Y-Combinator</title>
+
+        <!-- Primary Meta Tags -->
+        <title>Rejected By Y-Combinator: Interesting stories from those who didn't make it</title>
+        <meta name="title" content="Rejected By Y-Combinator: Interesting stories from those who didn't make it">
+        <meta name="description" content="A directory website for rejected YC companies, including fascinating stories, links, and more.">
+
+        <!-- Open Graph / Facebook -->
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="https://rejectedbyycombinator.com/">
+        <meta property="og:title" content="Rejected By Y-Combinator: Interesting stories from those who didn't make it">
+        <meta property="og:description" content="A directory website for rejected YC companies, including fascinating stories, links, and more.">
+        <meta property="og:image" content="https://rejectedbyycombinator.com/rejected-by-ycombinator.jpg">
+
+        <!-- Twitter -->
+        <meta property="twitter:card" content="summary_large_image">
+        <meta name="twitter:site" content="@aminozuur">
+        <meta property="twitter:url" content="https://rejectedbyycombinator.com/">
+        <meta property="twitter:title" content="Rejected By Y-Combinator: Interesting stories from those who didn't make it">
+        <meta property="twitter:description" content="A directory website for rejected YC companies, including fascinating stories, links, and more.">
+        <meta property="twitter:image" content="https://rejectedbyycombinator.com/rejected-by-ycombinator-tw.jpg">
+        <meta name="twitter:creator" content="@aminozuur" />
+        <!-- End metatags -->
     </head>
     <body>
         <nav><h1><a href="http://rejectedbyycombinator.com/">Rejected By Y-Combinator 💀</a></h1></nav>
