--- a/index.html
+++ b/index.html
@@ -36,15 +36,16 @@ nav {
 
 .madeby {
 	font-size: 0.85rem;
-    padding: 5px 10px;
+    padding: 7px 14px;
     text-align: center;
     position: fixed;
-    bottom: 0px;
-    right: 0px;
+    bottom: 10px;
+    right: 10px;
     background: white;
     border: 1px dashed lightgray;
-	cursor: pointer;
-	color: gray;
+    cursor: pointer;
+    color: gray;
+    border-radius: 15px;
 }
 .madeby u {
 	color: #ff6600;
