--- a/index.html
+++ b/index.html
@@ -39,19 +39,20 @@ nav {
     padding: 7px 14px;
     text-align: center;
     position: fixed;
-    bottom: 10px;
-    right: 10px;
+    bottom: 15px;
+    right: 15px;
     background: white;
-    border: 1px dashed lightgray;
+    border: 1px solid #e0cdc0;
     cursor: pointer;
     color: gray;
     border-radius: 15px;
+    box-shadow: 3px 3px 10px #e2e2ce;
 }
 .madeby u {
 	color: #ff6600;
 }
 
-.madeby:hover {border: 1px dashed #888; color: black;}
+.madeby:hover {border: 1px solid #d3b8a5; box-shadow: 3px 3px 10px #dbdbbf; color: black;}
 	
 .madeby:hover u {
 	color: #d04800;
