--- a/index.html
+++ b/index.html
@@ -1,132 +1,48 @@
+<meta charset="UTF-8" />
+<title>amin eftegarie</title>
+<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>📖</text></svg>">
+
 <style>
-    @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Old+Standard+TT:ital@0;1&display=swap');
 
 body {
-	font-family: 'Roboto Mono', monospace;
-	margin: 0 auto;
-	text-align: center;
-	background: #f6f6ef;
-	text-shadow: 1px 1px white;
-}
-::selection { 
-	background: #ff6600;
-	color: white;
-	text-shadow: none;
-}
-.accordion::selection {
-	background: transparent;
-}
-
-#container {
-	width: 500px;
-	margin: 0 auto;
-}
-h2 {margin: 0 0 30px 0;}
-	
-a {color: #ff6600;}
-	
-a:hover {color: blue;}
-	
-nav {
-	background: #ff6600;
-	text-align: center;
-	padding: 3px;
-	text-shadow: none;
-}
-
-.madeby {
-	font-size: 0.85rem;
-    padding: 7px 14px;
+    font-family: 'Old Standard TT', serif;
+    margin: 50 auto;
+    padding: 5%;
+    width: fit-content;
+    max-width: 500px;
     text-align: center;
-    position: fixed;
-    bottom: 15px;
-    right: 15px;
-    background: white;
-    border: 1px solid #e0cdc0;
-    cursor: pointer;
-    color: gray;
-    border-radius: 15px;
-    box-shadow: 3px 3px 10px #e2e2ce;
-}
-.madeby u {
-	color: #ff6600;
+    zoom: 1.4;
+    color: #666;
+    line-height: 2rem;
+    background: beige;
+    background: #efefef;
 }
 
-.madeby:hover {border: 1px solid #d3b8a5; box-shadow: 3px 3px 10px #dbdbbf; color: black;}
-	
-.madeby:hover u {
-	color: #d04800;
-
+h1 {
+    font-size: 3rem;
+    color: sienna;
+    letter-spacing: 5px;
 }
-#rbyimg {
-	height: 200px;
+a {
+    color: sienna;
 }
 
-
-
-h1 a {color: black; text-decoration: none;}
-	
-/* MOBILE */
-@media (max-width: 700px) {
-	nav {
-		zoom: 0.8;
-	}
-	
-	#container {
-		width: 80%;
-	}
-	
-	.madeby {zoom: 0.7;}
-	
-	.panel.show {margin-left: -20px;}
-	
-	#rbyimg {height: 100px;}
-	
+p {
+    text-align: justify;
 }
 </style>
-<html>
-    <head>
-        <title>Rejected by Y-Combinator Podcast</title>
-        <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>💀</text></svg>">
-        <title>Rejected By Y-Combinator</title>
+<head><body></body></head>
 
-        <!-- Primary Meta Tags -->
-        <title>Rejected By Y-Combinator: Interesting stories from those who didn't make it</title>
-        <meta name="title" content="Rejected By Y-Combinator: Interesting stories from those who didn't make it">
-        <meta name="description" content="A directory website for rejected YC companies, including fascinating stories, links, and more.">
+<h1>eftegarie</h1>
 
-        <!-- Open Graph / Facebook -->
-        <meta property="og:type" content="website">
-        <meta property="og:url" content="https://rejectedbyycombinator.com/">
-        <meta property="og:title" content="Rejected By Y-Combinator: Interesting stories from those who didn't make it">
-        <meta property="og:description" content="A directory website for rejected YC companies, including fascinating stories, links, and more.">
-        <meta property="og:image" content="https://rejectedbyycombinator.com/rejected-by-ycombinator.jpg">
+<p>
+  Hi, my name is Amin Eftegarie.<br>
+  I'm an amateur investor. I spend my time reading, learning, cooking, and talking to loved ones (dogs and a few humans).<br>
+  I once built and sold a profitable business.<br>
+  My email address is my first name @ my last name dot com<br>
 
-        <!-- Twitter -->
-        <meta property="twitter:card" content="summary_large_image">
-        <meta name="twitter:site" content="@aminozuur">
-        <meta property="twitter:url" content="https://rejectedbyycombinator.com/">
-        <meta property="twitter:title" content="Rejected By Y-Combinator: Interesting stories from those who didn't make it">
-        <meta property="twitter:description" content="A directory website for rejected YC companies, including fascinating stories, links, and more.">
-        <meta property="twitter:image" content="https://rejectedbyycombinator.com/rejected-by-ycombinator-tw.jpg">
-        <meta name="twitter:creator" content="@aminozuur" />
-        <!-- End metatags -->
-    </head>
-    <body>
-        <nav><h1><a href="http://rejectedbyycombinator.com/">Rejected By Y-Combinator 💀</a></h1></nav>
-    <br><br>
-<div id="container">
-    <a href="https://rejectedbyycombinator.com/rejected-by-ycombinator.jpg"><img src="https://rejectedbyycombinator.com/rejected-by-ycombinator.jpg" id="rbyimg"></a><br><br>
-    <h2>Interesting stories from those who didn't make it</h2>
-    <small>Each year, over ten thousand people are rejected by Y-Combinator. This page is a directory that collects their stories, so that we can learn from each other.</small>	
-    <br><br>
-    <iframe src="https://open.spotify.com/embed-podcast/show/6MYYlFqQmcpfOi3fPIKxgJ" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+  For my older brother Sam (the architect), kindly visit <a href="https://eftegarie.nl">eftegarie.nl</a>
 
-</div>
-
-<a href="https://twitter.com/aminozuur" target="_blank"><div class="madeby">Made in quarantine <br> by <u>@aminozuur</u></div></a>
-
-    </body>
-</html>
+</p>
