--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Old+Standard+TT:ital@0;1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;700&display=swap');
 
 body {
     font-family: 'Old Standard TT', serif;
@@ -13,15 +14,15 @@ body {
     width: fit-content;
     max-width: 500px;
     text-align: center;
-    zoom: 1.4;
     color: #666;
     line-height: 2rem;
     background: beige;
     background: #efefef;
+    font-size: 1rem;
 }
 
 h1 {
-    font-size: 3rem;
+    font-size: 4rem;
     color: sienna;
     letter-spacing: 5px;
 }
@@ -30,6 +31,7 @@ a {
 }
 
 p {
+    font-family: 'Roboto Mono', monospace;
     text-align: justify;
 }
 </style>
@@ -39,9 +41,10 @@ p {
 
 <p>
   Hi, my name is Amin Eftegarie.<br>
-  I'm an amateur investor. I spend my time reading, learning, cooking, and talking to loved ones (dogs and a few humans).<br>
-  I once built and sold a profitable business.<br>
-  My email address is my first name @ my last name dot com<br>
+  I'm an amateur investor. I spend my time reading, learning, cooking, and talking to people close to me.<br><br>
+  I've visited 20+ countries and speak Dutch, English, and a tiny bit of Persian. 
+  I once built and sold a profitable business. 
+  My email address is my first name @ my last name dot com<br><br>
 
   For my older brother Sam (the architect), kindly visit <a href="https://eftegarie.nl">eftegarie.nl</a>
 
