--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 body {
     font-family: 'Old Standard TT', serif;
-    margin: 50 auto;
+    margin: 20 auto;
     padding: 5%;
     width: fit-content;
     max-width: 500px;
@@ -42,7 +42,7 @@ p {
 <p>
   Hi, my name is Amin Eftegarie.<br>
   I'm an amateur investor. I spend my time reading, learning, cooking, and talking to people close to me.<br><br>
-  I've visited 20+ countries and speak Dutch, English, and a tiny bit of Persian. 
+  I was born in Iran, and grew up in the Netherlands. I've visited 20+ countries and speak Dutch, English, and a tiny bit of Persian. 
   I once built and sold a profitable business. 
   My email address is my first name @ my last name dot com<br><br>
 
