--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@ body {
     padding: 5%;
     width: fit-content;
     max-width: 500px;
-    text-align: center;
     color: #666;
     line-height: 2rem;
     background: beige;
@@ -26,6 +25,7 @@ h1 {
     color: sienna;
     letter-spacing: 3px;
     font-family: 'Old Standard TT', serif;
+    text-align: center;
 }
 a {
     color: sienna;
@@ -72,14 +72,13 @@ details summary {
 
 <details>
     <summary>More about me</summary>
-    <p>
     I was born in Iran, and grew up in the Netherlands. I've visited 20+ countries and speak Dutch, English, and a bit of Persian. 
     I once built and sold a profitable business. 
-    My email address is my first name @ my last name dot com<br><br>
-    </p>
+    My email address is my first name @ my last name dot com.
+    <br><br>
+    I believe in being brutally honest with the people in my life. 
+    If you're not occasionally rude, you're not being as brutally honest as you should be.
 </details>
-
-
 
 <!-- 
     I've hidden this button. Because users shouldn't have to tap or click to finally see the list of blogposts
